--- a/package.json
+++ b/package.json
@@ -2,16 +2,6 @@
   "name": "lokim-frontend",
   "version": "1.0.0",
   "description": "Front-end for LOKIM project",
-  "main": "src/electron-starter.js",
-  "scripts": {
-    "start": "nf start -p 3000",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "electron": "electron .",
-    "electron-start": "node src/electron-wait-react",
-    "react-start": "react-scripts start"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Jordan141/LokimFrontend.git"
@@ -21,7 +11,6 @@
   "bugs": {
     "url": "https://github.com/Jordan141/LokimFrontend/issues"
   },
-  "homepage": "https://github.com/Jordan141/LokimFrontend#readme",
   "devDependencies": {
     "electron": "^1.4.14",
     "foreman": "^2.0.0",
@@ -30,5 +19,16 @@
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
+  },
+  "homepage": "./",
+  "main": "src/electron-starter.js",
+  "scripts": {
+    "start": "nf start -p 3000",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "electron": "electron .",
+    "electron-start": "node src/electron-wait-react",
+    "react-start": "react-scripts start"
   }
 }
