--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "material-ui": "^0.20.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^4.2.0",
