--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "crypto2": "^1.0.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-responsive-sidebar": "^0.1.16",
