--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^15.4.2",
     "react-responsive-sidebar": "^0.1.16",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "sweetalert-react": "^0.4.11"
   },
   "homepage": "./",
   "main": "src/electron-starter.js",
