--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-responsive-sidebar": "^0.1.16",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "socket.io-client": "^2.1.0",
     "sweetalert-react": "^0.4.11"
   },
   "homepage": "./",
